Making changes to the landing page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,90 @@
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
+			<div class="wrapper hero">
+				<h1>
+					FAST TRACK YOUR TECH CAREER
+				</h1>
+				<p>
+					Griva School of Coding is a 3 months intensive training program to kickstart your tech career.
+					One-on-one mentoring and training by experienced, working professionals from top IT companies in the world.
+
+					<button>Call: 9972607894</button>
+				</p>
+				<div class="what clearfix">
+					<div class="footer-col footer-col-1">
+						<div>
+							A Full-stack JavaScript and Java developer programming institute
+						</div>
+					</div>
+					<div class="footer-col footer-col-2">
+						<div>
+							Teaching and mentoring by industry experts
+						</div>
+					</div>
+					<div class="footer-col footer-col-3">
+						<div>
+							Soft skill development +Mock Interviews
+						</div>
+					</div>
+
+				</div>
+				<div class="structure">
+					<table>
+						<tr>
+							<th></th>
+							<th>1 Month Course</th>
+							<th>3 Months Course</th>
+						</tr>
+						<tr>
+							<td>Classes</td>
+							<td>1 hour session every day</td>
+							<td>1 hour session every day</td>
+						</tr>
+						<tr>
+							<td>Course</td>
+							<td>
+								JavaScript/<br>
+								Angular/<br>
+								React JS/<br>
+								NodeJs+MongoDb/<br>
+								Java
+							</td>
+							<td>
+								Full stack. Choose one.
+								<br>1. MEAN stack
+								<br>2. MERN stack
+								<br>3. Java + Angular or React JS
+							</td>
+						</tr>
+						<tr>
+							<td>Soft skills</td>
+							<td>No</td>
+							<td>Yes</td>
+						</tr>
+						<tr>
+							<td>Data structures</td>
+							<td>No</td>
+							<td>Yes</td>
+						</tr>
+						<tr>
+							<td>Certification</td>
+							<td>Yes</td>
+							<td>Yes</td>
+						</tr>
+						<tr>
+							<td>Placement assistance</td>
+							<td>Yes</td>
+							<td>Soft skills development+Mock interviews with Industry experts </td>
+						</tr>
+						<tr>
+							<td>Fees</td>
+							<td>Rs. 12000/-</td>
+							<td>Rs. 35000/-</td>
+						</tr>
+					</table>
+				</div>
+			</div>
       <div class="wrapper">
         {{ content }}
       </div>
