--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,9 +1,11 @@
 <footer class="footer">
   <div class="container">
     <div class="copyright  typeset">
-      <small class="small">&copy; {{ site.title }} {{ site.time | date: '%Y' }}</small>
+<!--      <small class="small">&copy; {{ site.title }} {{ site.time | date: '%Y' }}</small>-->
     </div>
 
-    {% include nav-footer.html %}
+<!--    {% include nav-footer.html %}-->
+      Call us: 9972607894
   </div>
 </footer>
+
