--- a/_sass/sassline-base/_variables.scss
+++ b/_sass/sassline-base/_variables.scss
@@ -56,7 +56,7 @@ $gutterwidths: (
 // Add weight and style details too.
 // ! Set cap height to set to the baseline.
 $bodytype: (
-  font-family: 'Georgia, serif',
+  font-family: 'Nunito, serif',
   regular: 400,
   bold: 700,
   italic: italic,
@@ -77,7 +77,7 @@ $monospacetype: (
 ) !default;
 
 // Here are some local fonts cap-height sizes to get you started:
-// Georgia: 0.66, Times / Times New Roman: 0.65, Palatino: 0.52
+// Nunito: 0.66, Times / Times New Roman: 0.65, Palatino: 0.52
 // Lucida Grande: 0.72, Helvetica: 0.66, Verdana: 0.76, Tahoma: 0.76
 
 // Selection of Typekit fonts cap-height sizes:
