--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -4,3 +4,39 @@ styles: true
 ---
 
 @import "alembic";
+
+.logo img {
+  width: 100px;
+}
+
+.feature {
+  background: #fff;
+
+  .hero {
+    margin-bottom: 2rem;
+  }
+
+  .hero p {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+  .table {
+    padding: 5px;
+     th, td {
+       border: 1px solid #ddd;
+       background: #fafafa;
+       padding: 10px;
+       font-size: 0.8rem;
+     }
+  }
+
+  tr th:first-child + th + th,
+  tr td:first-child + td + td {
+    background: #05bf85;
+    color: #fff;
+    font-size: .95rem;
+    text-align: center;
+    max-width: 250px;
+    box-shadow: -1px 2px 5px 2px #aaa;
+  }
+}
