--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -15,6 +15,8 @@ styles: true
 
 .typeset code, .typeset pre {
   background-color: #efefef;
+  line-height: 1.2rem;
+  font-size: 0.85em;
 }
 
 .feature {
