--- a/_includes/site-feature.html
+++ b/_includes/site-feature.html
@@ -14,7 +14,29 @@
       <div class="hero">
         {{ feature_text | markdownify }}
       </div>
+    </div>
 
+    <div class="container-fluid">
+      <div class="row clearfix">
+        <div class="col-sm-4">
+          <img alt="angular-classes" src="https://angular.io/assets/images/logos/angular/logo-nav@2x.png">
+          <h3>Angular 6/Angular 7/Angular 8</h3>
+          <p>1 Month course</p>
+        </div>
+        <div class="col-sm-4">
+          <img alt="nodejs-classes" src="https://nodejs.org/static/images/logo.svg">
+          <h3>NodeJs</h3>
+          <p>1 Month course</p>
+        </div>
+        <div class="col-sm-4">
+          <img alt="javascript-classes" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/600px-JavaScript-logo.png">
+          <h3>JavaScript</h3>
+          <p>1 Month course</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container typeset">
       <div class="table">
         {{ plans | markdownify }}
       </div>
