--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -50,3 +50,32 @@ styles: true
     box-shadow: -1px 2px 5px 2px #aaa;
   }
 }
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.container-fluid {
+  width: 90%;
+  margin: auto;
+  .col-sm-4 {
+    width: 23%;
+    margin: 0 5px;
+    float: left;
+    height: 225px;
+    box-shadow: 0 0 1px 1px rgba(20,23,28,.1),
+    0 3px 1px 0 rgba(20,23,28,.1);
+  }
+
+  .col-sm-4:hover {
+    box-shadow: 0 0 2px 2px rgba(20,23,28,.1),
+    0 4px 1px 0 rgba(20,23,28,.1);
+    transition: all 0.6s;
+  }
+
+  img {
+    max-width: 125px;
+  }
+}
