--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -4,6 +4,16 @@ styles: true
 ---
 
 @import "alembic";
+$primary: #ff5959;
+
+a,a:hover {
+  color: $primary;
+}
+
+.nav a {
+  font-size: 0.79em;
+  font-weight: bold;
+}
 
 .logo img {
   width: 100px;
@@ -29,6 +39,7 @@ styles: true
   .hero p {
     font-size: 0.9rem;
     line-height: 1.4rem;
+    margin: 0;
   }
   .table {
     padding: 5px;
@@ -58,24 +69,98 @@ styles: true
 }
 
 .container-fluid {
+  h1 {
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 5px;
+  }
+
   width: 90%;
   margin: auto;
   .col-sm-4 {
     width: 23%;
     margin: 0 5px;
     float: left;
-    height: 225px;
     box-shadow: 0 0 1px 1px rgba(20,23,28,.1),
     0 3px 1px 0 rgba(20,23,28,.1);
+
+    .body {
+      text-align: left;
+      padding: 15px;
+      font-size: 12px;
+      line-height: initial;
+      position: relative;
+      height: 225px;
+
+      h3 {
+        font-size: 14px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+
+      ul {
+        padding-left: 15px;
+        margin-top: 10px;
+      }
+
+      .footer {
+        height: 35px;
+        padding: 10px;
+        background: $primary;
+        color: #fff;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        font-weight: bold;
+        text-align: center;
+      }
+    }
   }
 
   .col-sm-4:hover {
-    box-shadow: 0 0 2px 2px rgba(20,23,28,.1),
-    0 4px 1px 0 rgba(20,23,28,.1);
-    transition: all 0.6s;
+    box-shadow: 0 0 2px 2px rgba(20,23,28,.25),
+    0 4px 1px 0 rgba(20,23,28,.25);
+    transition: all 0.9s;
   }
 
+}
+
+.img-holder {
+  background: #d5d5d5;
+  padding-top: 10px;
+  height: 70px;
+  position: relative;
+
   img {
-    max-width: 125px;
+    height: 50px;
+  }
+
+  .highlight {
+    position: absolute;
+    left: 0;
+    top: 10px;
+    background: #f4c150;
+    font-size: 10px;
+    font-weight: bold;
+    height: 13px;
+    width: 65px;
+    line-height: normal;
+    box-shadow: 1px 1px 3px #aaa;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    color: #fff;
+  }
+}
+
+.article--page h1 {
+  display: none;
+}
+
+@media screen and (max-width: 760px) {
+  .container-fluid .col-sm-4 {
+    float: none;
+    width: 90%;
+    margin-bottom: 15px;
   }
 }
