--- a/_includes/site-analytics.html
+++ b/_includes/site-analytics.html
@@ -9,4 +9,8 @@
   gtag('config', '{{ site.google_analytics }}', {
     'anonymize_ip': {{ site.google_analytics_anonymize_ip | default: "true" }}
   });
+  
+  //Adsense
+  <script data-ad-client="ca-pub-9622851826323886" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </script>
