--- a/_includes/site-before-start.html
+++ b/_includes/site-before-start.html
@@ -1,1 +1,2 @@
+<script data-ad-client="ca-pub-9622851826323886" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Overwrite this file with code you want before the closing head tag -->
