--- a/_includes/site-feature.html
+++ b/_includes/site-feature.html
@@ -113,9 +113,26 @@
       </div>
     </div>
 
-    <div class="container typeset">
-      <div class="table">
-<!--        {{ plans | markdownify }}-->
+    <div class="container-fluid typeset">
+      <div class="home-tiles">
+        <h3>Latest Blogs</h3>
+        <article class="article article--page typeset">
+    
+          {% if paginator.posts %}
+            {% assign collectiondata = site.collections | where: "label", page.collectionpage | first %}
+            <h1>{{ collectiondata.title }}</h1>
+            {{ collectiondata.description | markdownify }}
+    
+          {% else %}
+            <h1>{{ page.title }}</h1>
+            {{ content }}
+            
+          {% endif %}
+    
+        </article>
+    
+        {% include post-list.html %}
+    
       </div>
     </div>
   </div>
