--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -67,8 +67,13 @@ a,a:hover {
 }
 
 .feature {
-  background: #fff;
 
+  // background-image: url('/assets/binary-1254502_960_720.png');
+  // height: 500px;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  
   .hero {
     margin-bottom: 2rem;
   }
