--- a/_includes/site-analytics.html
+++ b/_includes/site-analytics.html
@@ -1,15 +1,21 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', '{{ site.google_analytics }}');
-  gtag('config', '{{ site.google_analytics }}', {
-    'anonymize_ip': {{ site.google_analytics_anonymize_ip | default: "true" }}
-  });
+  var host = window.location.hostname;
+  if(host != "localhost"){
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', '{{ site.google_analytics }}');
+    gtag('config', '{{ site.google_analytics }}', {
+      'anonymize_ip': {{ site.google_analytics_anonymize_ip | default: "true" }}
+    });
   
+  } else {
+      console.log("I'm on local")
+  }
   //Adsense
 
 </script>
