--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -205,6 +205,7 @@ a,a:hover {
   width: 100% !important;
   object-fit: cover;
   height: 250px;
+  max-width: 1200px !important;
 }
 
 .article--page h1 {
