--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -2,7 +2,7 @@
 .c { color: #999988; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .k { color: #000000; font-weight: bold } /* Keyword */
-.o { color: #000000; font-weight: bold } /* Operator */
+.o { color: #ffffff; font-weight: bold } /* Operator */
 .cm { color: #999988; font-style: italic } /* Comment.Multiline */
 .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
 .c1 { color: #999988; font-style: italic } /* Comment.Single */
@@ -18,7 +18,7 @@
 .gu { color: #aaaaaa } /* Generic.Subheading */
 .gt { color: #aa0000 } /* Generic.Traceback */
 .kc { color: #000000; font-weight: bold } /* Keyword.Constant */
-.kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
+.kd { color: cornflowerblue; font-weight: bold } /* Keyword.Declaration */
 .kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
 .kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
 .kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
@@ -35,7 +35,7 @@
 .nf { color: #990000; font-weight: bold } /* Name.Function */
 .nl { color: #990000; font-weight: bold } /* Name.Label */
 .nn { color: #555555 } /* Name.Namespace */
-.nt { color: #000080 } /* Name.Tag */
+.nt { color: burlywood } /* Name.Tag */
 .nv { color: #008080 } /* Name.Variable */
 .ow { color: #000000; font-weight: bold } /* Operator.Word */
 .w { color: #bbbbbb } /* Text.Whitespace */
