--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -1,15 +1,16 @@
 // Background colours
-$backgroundColour: #ffffff !default;
+$backgroundColour: #1d282c !default;
+$boxColour: #2d373a !default;
 $codeBackgroundColour: #fafafa !default;
 $featureBackgroundColour: #f9fafa !default;
-$accentColour: #05bf85 !default;
+$accentColour: #fafafa !default;
 
 // Text colours
-$headingColour: #242e2b !default;
-$bodyColour: #384743 !default;
-$linkColour: #05bf85 !default;
+$headingColour: #ffffff !default;
+$bodyColour: #c2c2c2 !default;
+$linkColour: #fafafa !default;
 $hoverColour: #008000 !default;
-$focusColour: #fa407a !default;
+$focusColour: #ff5959 !default;
 $captionColour: #a8adac !default;
 $white: #ffffff !default;
 
