Phone number change

--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -5,7 +5,7 @@
     </div>
 
 <!--    {% include nav-footer.html %}-->
-      Call us: 9972607894
+      Email us: hello@griva.in
   </div>
 </footer>
 
