--- a/_includes/site-analytics.html
+++ b/_includes/site-analytics.html
@@ -12,7 +12,9 @@
     gtag('config', '{{ site.google_analytics }}', {
       'anonymize_ip': {{ site.google_analytics_anonymize_ip | default: "true" }}
     });
-  
+    
+    <script async src='https://cse.google.com/cse.js?cx=partner-pub-9622851826323886:6vtmzxmecyd'></script><div class="gcse-searchbox-only"></div>
+
   } else {
       console.log("I'm on local")
   }
